<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF3F3F3"
    android:padding="3dp"
    tools:context="adapto.com.menuc.MainActivities.EnviarConviteActivity"
    android:fitsSystemWindows="false">

    <TextView
        android:id="@+id/convite_expli"
        android:layout_width="388dp"
        android:layout_height="127dp"
        android:background="@drawable/borda"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:scrollbars="vertical"
        android:text="@string/aviso_convite"
        android:textColor="#00a800"
        android:textSize="14sp"
        app:fontFamily="@font/font_akuma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aviso_invite"
        app:layout_constraintVertical_bias="0.035" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/indicado2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:boxStrokeColor="@color/verde_escuro_daora"
        app:helperText="@string/hint_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indicado1"
        app:layout_constraintVertical_bias="0.264">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="328dp"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:hint="Email do Indicado">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/indicado1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:boxStrokeColor="@color/verde_escuro_daora"
        app:helperText="@string/hint_nome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convite_expli"
        app:layout_constraintVertical_bias="0.233"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="328dp"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:hint="Nome do Indicado">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_send"
        android:layout_width="141dp"
        android:layout_height="51dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#DFE4C208"
        android:paddingLeft="30dp"
        android:paddingRight="20dp"
        android:text="Enviar"
        android:textSize="14sp"
        app:icon="@drawable/button_enviar_preto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indicado2"
        app:layout_constraintVertical_bias="0.145" />

    <TextView
        android:id="@+id/aviso_invite"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/aviso_hint"
        android:textColor=" #FA410C"
        android:textSize="17sp"
        app:fontFamily="@font/font_akuma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />


</androidx.constraintlayout.widget.ConstraintLayout>